--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ariesgun.github.io/celo-domain",
   "name": "celo-react-boilerplate",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "dotenv": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "ipfs-http-client": "^56.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -31,7 +33,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat run --network alfajores scripts/deploy.js",
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test-contract": "npx hardhat test"
   },
   "eslintConfig": {
